# testy_greeny_intern

./: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tasks/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  Dockerfile  pyproject.toml  requirements.txt
tasks/scripts/: fifth.py  fourth.py  third.py
