[tool.poetry]
name = "testy_greeny_intern"
version = "0.1.0"
description = ""
authors = ["demogi4523 <demogi4523@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
